Fix the cut images on IE and modify font size preserving the unit (px,em,pt)
git-svn-id: svn://zone.spip.org/spip-zone/_plugins_@5648 ac52e18a-acf5-0310-9fe8-c4428f23b10a

--- a/_dev_/boutons_contenu/boutons_contenu.css
+++ b/_dev_/boutons_contenu/boutons_contenu.css
@@ -3,7 +3,8 @@
 	float : right;
 }
 .boutons_contenu button {
-	margin: -10px 0 0 0;
+	position:relative;
+	top: -10px;
 	padding: 0;
 	border: 1px transparent solid;
 	background-color: transparent;
